--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html>
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
-   <script src="HTML.js" type="text/javascript"></script>
+   <script src="main.js" type="text/javascript"></script>
   <title>test-paper</title>
  </head>
  <body>
@@ -13,87 +13,111 @@
   <hr/>
 
   <form>
+  <header>
+  <section>
   <p align="center" >
-  考试科目：<u><b>统一建模语言 UML</b></u>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  时间：<u>100分钟</u>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  得分：<input type="text" id="count" size=12x><u> </u>
-
-    <p align="center" >
-    班级：<input type="text" name="class" size="15px"/>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    学号：<input type="text" name="id" size="15px"/>
-    &nbsp;
-    姓名：<input type="text" name="name" size="15px"/>
-  <hr/>
-
-  <b>一、	 填空题 </b>
-  <p>1.UML 的中文全称是：
-    <input type="text" id="UML" size="12px"/>
+    考试科目：<b>统一建模语言 UML</b>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    时间：100分钟
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    得分：<input type="text" id="count" >
   </p>
-    2.对象最突出的特征是：
-    <input type="text" id="one" size="12px">
-    <input type="text" id="two" size="12px">
-    <input type="text" id="three" size="12px">
-    <br/>
+  <p align="center" >
+    班级：<input type="text" name="class"/>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    学号：<input type="text" name="id"/>
+      &nbsp;
+    姓名：<input type="text" name="name"/>
+  </p><hr/>
+  </section>
+  </header>
 
-  <b>二、	 选择题</b><br/>
-  1．UML 与软件工程的关系是：<br/>
-    <input type="radio" name="select1" value="A" />
-    （A）UML 就是软件工程<br />
-    <input type="radio" name="select1" value="B" />
-    （B）UML 参与到软件工程中软件开发过程的几个阶段<br />
-    <input type="radio" name="select1" value="C" />
-    （C）UML 与软件工程无关<br />
-    <input type="radio" name="select1" value="D" />
-    （D）UML 是软件工程的一部分<br />
-    2．Java 语言支持：<br/>
-    <input type="radio" name="select2" value="A" />
-    （A）单继承<br />
-    <input type="radio" name="select2" value="B" />
-    （B）多继承<br />
-    <input type="radio" name="select2" value="C" />
-    （C）单继承和多继承都支持<br />
-    <input type="radio" name="select2" value="D" />
-    （D）单继承和多继承都不支持<br />
-
-  <b>三、	 多选题</b>
-
-  1． 用例的粒度分为以下哪三种。<br />
-   <input type="checkbox" name="moreSelect1" value="A"/>
-   （A）概述级、<br/>
-   <input type="checkbox" name="moreSelect1" value="B"/>
-   （B）需求级<br />
-   <input type="checkbox" name="moreSelect1" value="C"/>
-   （C）用户目标级、<br />
-   <input type="checkbox" name="moreSelect1" value="D"/>
-   （D）子功能级,<br/>
-
-  2． 类图由以下哪三部分组成。<br />
-   <input type="checkbox" name="moreSelect2" value="A"/>
-   （A）名称(Name)<br />
-   <input type="checkbox" name="moreSelect2" value="B"/>
-   （B）属性(Attribute)<br />
-   <input type="checkbox" name="moreSelect2" value="C"/>
-   （C）操作(Operation)<br />
-   <input type="checkbox" name="moreSelect2" value="D"/>
-   （D）方法（Function）<br />
-
-  <b>四、	 判断题</b><br />
-  1．用例图只是用于和客户交流和沟通的，用于确定需求。
-    <input type="radio" name="judge1" value="Y" />YES
-    <input type="radio" name="judge1" value="N" />NO
-    <br />
-  2．在状态图中，终止状态在一个状态图中允许有任意多个。
-    <input type="radio" name="judge2" value="Y" />YES
-    <input type="radio" name="judge2" value="N" />NO
-   <br />
-  <b>五、	 简答题</b><br />
-  1． 简述什么是模型以及模型的表现形式?
-   <textarea rows = "5" cols = "40" id ="questions" ></textarea><br />
-
-   <input type="button" value="提交" onclick = "scores();"/>
- </form>
+  <section>
+    <h3>一、填空题 </h3>
+      <ol>
+        <li>UML 的中文全称是：
+          <input type="text" id="UML" size="12px"/>
+        </li>
+        <li>对象最突出的特征是：
+          <input type="text" id="one" size="12px">
+          <input type="text" id="two" size="12px">
+          <input type="text" id="three" size="12px">
+        </li>
+      </ol>
+  <section>
+    <h3>二、选择题</h3>
+      <ol>
+        <li>UML 与软件工程的关系是：<br/>
+          <input type="radio" name="select1" value="A" />
+          （A）UML 就是软件工程<br />
+          <input type="radio" name="select1" value="B" />
+          （B）UML 参与到软件工程中软件开发过程的几个阶段<br />
+          <input type="radio" name="select1" value="C" />
+          （C）UML 与软件工程无关<br />
+          <input type="radio" name="select1" value="D" />
+          （D）UML 是软件工程的一部分<br />
+        </li>
+        <li>Java 语言支持：<br/>
+          <input type="radio" name="select2" value="A" />
+          （A）单继承<br />
+          <input type="radio" name="select2" value="B" />
+          （B）多继承<br />
+          <input type="radio" name="select2" value="C" />
+          （C）单继承和多继承都支持<br />
+          <input type="radio" name="select2" value="D" />
+          （D）单继承和多继承都不支持<br />
+        </li>
+      </ol>
+  </section>
+  <section>
+    <h3>三、多选题</h3>
+      <ol>
+        <li>用例的粒度分为以下哪三种。<br />
+          <input type="checkbox" name="moreSelect1" value="A"/>
+          （A）概述级、<br/>
+          <input type="checkbox" name="moreSelect1" value="B"/>
+          （B）需求级<br />
+          <input type="checkbox" name="moreSelect1" value="C"/>
+          （C）用户目标级、<br />
+          <input type="checkbox" name="moreSelect1" value="D"/>
+          （D）子功能级,<br/>
+        </li>
+        <li>类图由以下哪三部分组成。<br />
+            <input type="checkbox" name="moreSelect2" value="A"/>
+            （A）名称(Name)<br />
+            <input type="checkbox" name="moreSelect2" value="B"/>
+            （B）属性(Attribute)<br />
+            <input type="checkbox" name="moreSelect2" value="C"/>
+            （C）操作(Operation)<br />
+            <input type="checkbox" name="moreSelect2" value="D"/>
+            （D）方法（Function）<br />
+        </li>
+      </ol>
+  </section>
+  <section>
+    <h3>四、判断题</h3>
+      <ol>
+        <li>用例图只是用于和客户交流和沟通的，用于确定需求。
+          <input type="radio" name="judge1" value="Y" />YES
+          <input type="radio" name="judge1" value="N" />NO
+          <br />
+        </li>
+        <li>在状态图中，终止状态在一个状态图中允许有任意多个。
+          <input type="radio" name="judge2" value="Y" />YES
+          <input type="radio" name="judge2" value="N" />NO
+          <br />
+        </li>
+      </ol>
+  </section>
+  <section>
+    <h3>五、答题</h3>
+      <ol>
+        <li>简述什么是模型以及模型的表现形式?</br>
+          <textarea rows = "5" cols = "40" id ="questions" ></textarea>
+        </li>
+      </ol>
+          <input type="button" value="提交"   onclick="scores();"/>
+  </section>
+  </form>
  </body>
 </html>
