--- a/index.html
+++ b/index.html
@@ -36,35 +36,35 @@
     <h3>一、填空题 </h3>
       <ol>
         <li>UML 的中文全称是：
-          <input type="text" id="UML" size="12px"/>
+          <input type="text" id="1_1" size="12px"/>
         </li>
         <li>对象最突出的特征是：
-          <input type="text" id="one" size="12px">
-          <input type="text" id="two" size="12px">
-          <input type="text" id="three" size="12px">
+          <input type="text" id="2_1" size="12px">
+          <input type="text" id="2_2" size="12px">
+          <input type="text" id="2_3" size="12px">
         </li>
       </ol>
   <section>
     <h3>二、选择题</h3>
       <ol>
         <li>UML 与软件工程的关系是：<br/>
-          <input type="radio" name="select1" value="A" />
+          <input type="radio" name="2_1_1" value="A" />
           （A）UML 就是软件工程<br />
-          <input type="radio" name="select1" value="B" />
+          <input type="radio" name="2_1_1" value="B" />
           （B）UML 参与到软件工程中软件开发过程的几个阶段<br />
-          <input type="radio" name="select1" value="C" />
+          <input type="radio" name="2_1_1" value="C" />
           （C）UML 与软件工程无关<br />
-          <input type="radio" name="select1" value="D" />
+          <input type="radio" name="2_1_11" value="D" />
           （D）UML 是软件工程的一部分<br />
         </li>
         <li>Java 语言支持：<br/>
-          <input type="radio" name="select2" value="A" />
+          <input type="radio" name="2_2_1" value="A" />
           （A）单继承<br />
-          <input type="radio" name="select2" value="B" />
+          <input type="radio" name="2_2_1" value="B" />
           （B）多继承<br />
-          <input type="radio" name="select2" value="C" />
+          <input type="radio" name="2_2_1" value="C" />
           （C）单继承和多继承都支持<br />
-          <input type="radio" name="select2" value="D" />
+          <input type="radio" name="2_2_1" value="D" />
           （D）单继承和多继承都不支持<br />
         </li>
       </ol>
@@ -73,23 +73,23 @@
     <h3>三、多选题</h3>
       <ol>
         <li>用例的粒度分为以下哪三种。<br />
-          <input type="checkbox" name="moreSelect1" value="A"/>
+          <input type="checkbox" name="3_1" value="A"/>
           （A）概述级、<br/>
-          <input type="checkbox" name="moreSelect1" value="B"/>
+          <input type="checkbox" name="3_1" value="B"/>
           （B）需求级<br />
-          <input type="checkbox" name="moreSelect1" value="C"/>
+          <input type="checkbox" name="3_1" value="C"/>
           （C）用户目标级、<br />
-          <input type="checkbox" name="moreSelect1" value="D"/>
+          <input type="checkbox" name="3_1" value="D"/>
           （D）子功能级,<br/>
         </li>
         <li>类图由以下哪三部分组成。<br />
-            <input type="checkbox" name="moreSelect2" value="A"/>
+            <input type="checkbox" name="3_2" value="A"/>
             （A）名称(Name)<br />
-            <input type="checkbox" name="moreSelect2" value="B"/>
+            <input type="checkbox" name="3_2" value="B"/>
             （B）属性(Attribute)<br />
-            <input type="checkbox" name="moreSelect2" value="C"/>
+            <input type="checkbox" name="3_2" value="C"/>
             （C）操作(Operation)<br />
-            <input type="checkbox" name="moreSelect2" value="D"/>
+            <input type="checkbox" name="3_2" value="D"/>
             （D）方法（Function）<br />
         </li>
       </ol>
@@ -98,13 +98,13 @@
     <h3>四、判断题</h3>
       <ol>
         <li>用例图只是用于和客户交流和沟通的，用于确定需求。
-          <input type="radio" name="judge1" value="Y" />YES
-          <input type="radio" name="judge1" value="N" />NO
+          <input type="radio" name="4_1" value="Y" />YES
+          <input type="radio" name="4_1" value="N" />NO
           <br />
         </li>
         <li>在状态图中，终止状态在一个状态图中允许有任意多个。
-          <input type="radio" name="judge2" value="Y" />YES
-          <input type="radio" name="judge2" value="N" />NO
+          <input type="radio" name="4_2" value="Y" />YES
+          <input type="radio" name="4_2" value="N" />NO
           <br />
         </li>
       </ol>
@@ -113,10 +113,10 @@
     <h3>五、答题</h3>
       <ol>
         <li>简述什么是模型以及模型的表现形式?</br>
-          <textarea rows = "5" cols = "40" id ="questions" ></textarea>
+          <textarea rows = "5" cols = "40" id ="5_1" ></textarea>
         </li>
       </ol>
-          <input type="button" value="提交"   onclick="scores();"/>
+          <input type="button" value="提交"   onclick=" printScore();"/>
   </section>
   </form>
  </body>
