--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html>
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
+   <script type="text/javascript" src="lib/lodash-2.4.1/lodash.compat.js"></script>
    <script src="main.js" type="text/javascript"></script>
   <title>test-paper</title>
  </head>
@@ -23,11 +24,11 @@
     得分：<input type="text" id="count" >
   </p>
   <p align="center" >
-    班级：<input type="text" name="class"/>
+    班级：<input type="text" id="class"/>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    学号：<input type="text" name="id"/>
+    学号：<input type="text" id="id"/>
       &nbsp;
-    姓名：<input type="text" name="name"/>
+    姓名：<input type="text" id="name"/>
   </p><hr/>
   </section>
   </header>
