--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
    <script type="text/javascript" src="lib/lodash-2.4.1/lodash.compat.js"></script>
+   <script src="question.js" type="text/javascript"></script>
    <script src="main.js" type="text/javascript"></script>
+   <script src="fills.js" type="text/javascript"></script>
+   <script src="answer.js" type="text/javascript"></script>
+
   <title>test-paper</title>
  </head>
  <body>
@@ -37,14 +41,14 @@
     <h3>一、填空题 </h3>
       <ol>
         <li>
-          <label for="1_1_1">UML 的中文全称是：</label>
-          <input type="text" id="1_1_1" name="1_1" size="12px"/>
+          <label for="1_1">UML 的中文全称是：</label>
+          <input type="text" id="1_1" name="1_1" size="12px"/>
         </li>
         <li>
           <label for="2_1">对象最突出的特征是：</label>
-          <input type="text" id="2_1" name="2_1"size="12px">
-          <input type="text" id="2_2" name="2_2"size="12px">
-          <input type="text" id="2_3" name="2_3"size="12px">
+          <input type="text" id="2_1" name="1_2"size="12px">
+          <input type="text" id="2_2" name="1_2"size="12px">
+          <input type="text" id="2_3" name="1_2"size="12px">
         </li>
       </ol>
   <section>
@@ -124,7 +128,7 @@
           <textarea rows = "5" cols = "40" id ="5_1" ></textarea>
         </li>
       </ol>
-          <input type="button" value="提交"onclick=" printScore();"/>
+          <input type="button" value="提交"onclick=" printScorce();"/>
   </section>
   </form>
  </body>
