complete chince.js

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
    <script type="text/javascript" src="lib/lodash-2.4.1/lodash.compat.js"></script>
    <script src="question.js" type="text/javascript"></script>
+
    <script src="main.js" type="text/javascript"></script>
    <script src="fills.js" type="text/javascript"></script>
+   <script src="chince.js" type="text/javascript"></script>
    <script src="answer.js" type="text/javascript"></script>
 
   <title>test-paper</title>
@@ -128,7 +130,7 @@
           <textarea rows = "5" cols = "40" id ="5_1" ></textarea>
         </li>
       </ol>
-          <input type="button" value="提交"onclick=" printScorce();"/>
+          <input type="button" value="提交"onclick=" printScore();"/>
   </section>
   </form>
  </body>
