--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
    <script src="question.js" type="text/javascript"></script>
 
    <script src="main.js" type="text/javascript"></script>
-   <script src="fills.js" type="text/javascript"></script>
-   <script src="chince.js" type="text/javascript"></script>
+   <script src="fill.js" type="text/javascript"></script>
+   <script src="choice.js" type="text/javascript"></script>
+   <script src="multiple-choice.js" type="text/javascript"></script>
    <script src="answer.js" type="text/javascript"></script>
 
   <title>test-paper</title>
