complete judge.js

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
    <script type="text/javascript" src="lib/lodash-2.4.1/lodash.compat.js"></script>
    <script src="question.js" type="text/javascript"></script>
-
+   <script src="answer.js" type="text/javascript"></script>
    <script src="main.js" type="text/javascript"></script>
    <script src="fill.js" type="text/javascript"></script>
    <script src="choice.js" type="text/javascript"></script>
    <script src="multiple-choice.js" type="text/javascript"></script>
-   <script src="answer.js" type="text/javascript"></script>
+   <script src="judge.js" type="text/javascript"></script>
+
 
   <title>test-paper</title>
  </head>
