--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
    <script type="text/javascript" src="lib/lodash-2.4.1/lodash.compat.js"></script>
-   <script src="question.js" type="text/javascript"></script>
-   <script src="answer.js" type="text/javascript"></script>
-   <script src="main.js" type="text/javascript"></script>
-   <script src="fill.js" type="text/javascript"></script>
-   <script src="choice.js" type="text/javascript"></script>
-   <script src="multiple-choice.js" type="text/javascript"></script>
-   <script src="judge.js" type="text/javascript"></script>
-
-
+   <script src="JS/question.js" type="text/javascript"></script>
+   <script src="JS/answer.js" type="text/javascript"></script>
+   <script src="JS/main.js" type="text/javascript"></script>
+   <script src="JS/fill.js" type="text/javascript"></script>
+   <script src="JS/choice.js" type="text/javascript"></script>
+   <script src="JS/multiple-choice.js" type="text/javascript"></script>
+   <script src="JS/judge.js" type="text/javascript"></script>
+   <script src="JS/short-answer.js" type="text/javascript"></script>
   <title>test-paper</title>
  </head>
  <body>
@@ -129,7 +128,7 @@
       <ol>
         <li>
           <label for="5_1">简述什么是模型以及模型的表现形式?</label></br>
-          <textarea rows = "5" cols = "40" id ="5_1" ></textarea>
+          <textarea rows = "5" cols = "40" id ="5_1" name="5_1" ></textarea>
         </li>
       </ol>
           <input type="button" value="提交"onclick=" printScore();"/>
