--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
    <script type="text/javascript" src="lib/lodash-2.4.1/lodash.compat.js"></script>
-   <script src="JS/question.js" type="text/javascript"></script>
-   <script src="JS/answer.js" type="text/javascript"></script>
+   <script src="JS/model/question.js" type="text/javascript"></script>
+   <script src="JS/model/answer.js" type="text/javascript"></script>
    <script src="JS/main.js" type="text/javascript"></script>
-   <script src="JS/fill.js" type="text/javascript"></script>
-   <script src="JS/choice.js" type="text/javascript"></script>
-   <script src="JS/multiple-choice.js" type="text/javascript"></script>
-   <script src="JS/judge.js" type="text/javascript"></script>
-   <script src="JS/short-answer.js" type="text/javascript"></script>
+   <script src="JS/model/fill.js" type="text/javascript"></script>
+   <script src="JS/model/choice.js" type="text/javascript"></script>
+   <script src="JS/model/multiple-choice.js" type="text/javascript"></script>
+   <script src="JS/model/judge.js" type="text/javascript"></script>
+   <script src="JS/model/short-answer.js" type="text/javascript"></script>
   <title>test-paper</title>
  </head>
  <body>
