--- a/index.html
+++ b/index.html
@@ -48,82 +48,99 @@
       </form>
 
     <div class="panel panel-default form-group ">
-      <div class="panel panel-default form-group" style="background-color:rgb(248,248,248)">
-        <h3 >一、填空题 <small>(第1小题10分，第2小题每空5分)</small></h3>
-          </div>
-            <ol>
-              <li>
-                <div >
-                  <label for="1_1">UML 的中文全称是：</label>
-                  <input type="text" id="1_1" name="1_1" size="12px"/>
-                </div>
-              </li>
-              <li>
-                <div>
-                  <label for="2_1">对象最突出的特征是：</label>
-                  <input type="text" id="2_1" name="1_2"size="12px">
-                  <input type="text" id="2_2" name="1_2"size="12px">
-                  <input type="text" id="2_3" name="1_2"size="12px">
-                </div>
-              </li>
-            </ol>
+      <div class="panel panel-default form-group " style="background-color:rgb(248,248,248)">
+        <span class="glyphicon glyphicon-sort-by-attributes">
+          <h3 >一、填空题 <small>(第1小题10分，第2小题每空5分)</small></h3>
+        </span>
+      </div>
+        <ol>
+          <li>
+            <div >
+              <label for="1_1">UML 的中文全称是：</label>
+              <input type="text" id="1_1" name="1_1" size="12px"/>
+            </div>
+          </li>
+          <li>
+            <div>
+              <label for="2_1">对象最突出的特征是：</label>
+              <input type="text" id="2_1" name="1_2"size="12px">
+              <input type="text" id="2_2" name="1_2"size="12px">
+              <input type="text" id="2_3" name="1_2"size="12px">
+            </div>
+          </li>
+        </ol>
+    </div>
     <div class="panel panel-default form-group">
       <div class="panel panel-default form-group" style="background-color:rgb(248,248,248)">
-      <h3>二、选择题<small>(每小题10分)</samll></h3>
+        <span class="glyphicon glyphicon-sort-by-attributes">
+          <h3>二、选择题<small>(每小题10分)</samll></h3>
+        </span>
       </div>
       <ol>
-        <li>UML 与软件工程的关系是：<br/>
-          <input type="radio" id="2_1_1" name="2_1_1" value="A" />
-          <label for="2_1_1">（A）UML 就是软件工程</label><br />
-          <input type="radio"id="2_1_2"name="2_1_1" value="B" />
-          <label for="2_1_2">（B）UML 参与到软件工程中软件开发过程的几个阶段</label><br />
-          <input type="radio" id="2_1_3"name="2_1_1" value="C" />
-          <label for="2_1_3">（C）UML 与软件工程无关</label><br />
-          <input type="radio" id="2_1_4"name="2_1_1" value="D" />
-          <label for="2_1_4">（D）UML 是软件工程的一部分</label><br />
-        </li>
-        <li>Java 语言支持：<br/>
-          <input type="radio" id="2_2_1"name="2_2_1" value="A" />
-          <label for="2_2_1">（A）单继承</label><br />
-          <input type="radio" id="2_2_2"name="2_2_1" value="B" />
-          <label for="2_2_2">（B）多继承</label><br />
-          <input type="radio" id="2_2_3"name="2_2_1" value="C" />
-          <label for="2_2_3">（C）单继承和多继承都支持</label><br />
-          <input type="radio" id="2_2_4"name="2_2_1" value="D" />
-          <label for="2_2_4">（D）单继承和多继承都不支持</label><br />
-        </li>
+        <div>
+          <li>UML 与软件工程的关系是：<br/>
+            <input type="radio" id="2_1_1" name="2_1_1" value="A" />
+            <label for="2_1_1">（A）UML 就是软件工程</label><br />
+            <input type="radio"id="2_1_2"name="2_1_1" value="B" />
+            <label for="2_1_2">（B）UML 参与到软件工程中软件开发过程的几个阶段</label><br />
+            <input type="radio" id="2_1_3"name="2_1_1" value="C" />
+            <label for="2_1_3">（C）UML 与软件工程无关</label><br />
+            <input type="radio" id="2_1_4"name="2_1_1" value="D" />
+            <label for="2_1_4">（D）UML 是软件工程的一部分</label><br />
+          </li>
+        </div>
+        <div>
+          <li>Java 语言支持：<br/>
+            <input type="radio" id="2_2_1"name="2_2_1" value="A" />
+            <label for="2_2_1">（A）单继承</label><br />
+            <input type="radio" id="2_2_2"name="2_2_1" value="B" />
+            <label for="2_2_2">（B）多继承</label><br />
+            <input type="radio" id="2_2_3"name="2_2_1" value="C" />
+            <label for="2_2_3">（C）单继承和多继承都支持</label><br />
+            <input type="radio" id="2_2_4"name="2_2_1" value="D" />
+            <label for="2_2_4">（D）单继承和多继承都不支持</label><br />
+          </li>
+        </div>
       </ol>
     </div>
     <div class="panel panel-default form-group">
       <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
-        <h3>三、多选题<small>(每小题10分)</small></h3>
+        <span class="glyphicon glyphicon-sort-by-attributes">
+          <h3>三、多选题<small>(每小题10分)</small></h3>
+        </span>
       </div>
         <ol>
-        <li>用例的粒度分为以下哪三种。<br />
-          <input type="checkbox" id="3_1_1"name="3_1" value="A"/>
-          <label for="3_1_1">（A）概述级、</label><br/>
-          <input type="checkbox" id="3_1_2"name="3_1" value="B"/>
-          <label for="3_1_2">（B）需求级</label><br />
-          <input type="checkbox" id="3_1_3"name="3_1" value="C"/>
-          <label for="3_1_3">（C）用户目标级、</label><br />
-          <input type="checkbox" id="3_1_4"name="3_1" value="D"/>
-          <label for="3_1_4">（D）子功能级,</label><br/>
-        </li>
-        <li>类图由以下哪三部分组成。<br />
-            <input type="checkbox" id="3_2_1"name="3_2" value="A"/>
-            <label for="3_2_1">（A）名称(Name)</label><br />
-            <input type="checkbox" id="3_2_2"name="3_2" value="B"/>
-            <label for="3_2_2">（B）属性(Attribute)</label><br />
-            <input type="checkbox" id="3_2_3"name="3_2" value="C"/>
-            <label for="3_2_3">（C）操作(Operation)</label><br />
-            <input type="checkbox" id="3_2_4"name="3_2" value="D"/>
-            <label for="3_2_4">（D）方法（Function）</label><br />
-        </li>
-      </ol>
+          <div>
+            <li>用例的粒度分为以下哪三种。<br />
+              <input type="checkbox" id="3_1_1"name="3_1" value="A"/>
+              <label for="3_1_1">（A）概述级、</label><br/>
+              <input type="checkbox" id="3_1_2"name="3_1" value="B"/>
+              <label for="3_1_2">（B）需求级</label><br />
+              <input type="checkbox" id="3_1_3"name="3_1" value="C"/>
+              <label for="3_1_3">（C）用户目标级、</label><br />
+              <input type="checkbox" id="3_1_4"name="3_1" value="D"/>
+              <label for="3_1_4">（D）子功能级,</label><br/>
+            </li>
+          </div>
+          <div>
+            <li>类图由以下哪三部分组成。<br />
+              <input type="checkbox" id="3_2_1"name="3_2" value="A"/>
+              <label for="3_2_1">（A）名称(Name)</label><br />
+              <input type="checkbox" id="3_2_2"name="3_2" value="B"/>
+              <label for="3_2_2">（B）属性(Attribute)</label><br />
+              <input type="checkbox" id="3_2_3"name="3_2" value="C"/>
+              <label for="3_2_3">（C）操作(Operation)</label><br />
+              <input type="checkbox" id="3_2_4"name="3_2" value="D"/>
+              <label for="3_2_4">（D）方法（Function）</label><br />
+            </li>
+          </div>
+        </ol>
     </div>
     <div class="panel panel-default form-group ">
       <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
-        <h3>四、判断题<small>(每小题10分)</small></h3>
+        <span class="glyphicon glyphicon-sort-by-attributes">
+          <h3>四、判断题<small>(每小题10分)</small></h3>
+        </span>
       </div>
         <ol>
           <li>用例图只是用于和客户交流和沟通的，用于确定需求。
@@ -133,7 +150,7 @@
             </div>
             <div>
               <input type="radio" id="4_1_2"name="4_1" value="N" />
-              <label for="4_2_2">NO</label>
+              <label for="4_1_2">NO</label>
             </div>
           </li>
           <li>在状态图中，终止状态在一个状态图中允许有任意多个。
@@ -143,23 +160,26 @@
             </div>
             <div>
               <input type="radio" id="4_2_2"name="4_2" value="N" />
-              <label for="4_1_2">NO</label>
+              <label for="4_2_2">NO</label>
             </div>
             <br />
           </li>
       </ol>
     </div>
     <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
+      <span class="glyphicon glyphicon-sort-by-attributes">
         <h3>五、简答题<small>(每小题15分)</small></h3>
+      </span>
     </div>
       <ol>
-        <li>
-          <label for="5_1">简述什么是模型以及模型的表现形式?</label></br>
-          <textarea rows = "5" cols = "40" id ="5_1" name="5_1" ></textarea>
-        </li>
+        <div>
+          <li>
+            <label for="5_1">简述什么是模型以及模型的表现形式?</label></br>
+            <textarea rows = "5" cols = "40" id ="5_1" name="5_1" ></textarea>
+          </li>
+        </div>
       </ol>
     <div  class="btn-lg glyphicon glyphicon-user">
-      <span ></span>
       <input type="button" value="提交"onclick=" printScore();"/>
     </div>
   </div>
