--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
    <script src="JS/model/short-answer.js" type="text/javascript"></script>
 
    <link rel="stylesheet" href="lib/bootstrap-3.2.0-dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
-  <title>test-paper</title>
+  <title>
+    test-paper
+  </title>
   </head>
   <body>
     <div class="panel panel-default">
@@ -54,18 +56,22 @@
         </span>
       </div>
         <ol>
-          <li>
-            <div >
+          <li class="">
+            <div class="form-group">
               <label for="1_1">UML 的中文全称是：</label>
-              <input type="text" id="1_1" name="1_1" size="12px"/>
-            </div>
+                <div class="form-inline">
+                  <input type="text" id="1_1" name="1_1" size="12px"class="form-control"/>
+                </div>
+              </div>
           </li>
-          <li>
-            <div>
+          <li  class="">
+            <div class="form-group">
               <label for="2_1">对象最突出的特征是：</label>
-              <input type="text" id="2_1" name="1_2"size="12px">
-              <input type="text" id="2_2" name="1_2"size="12px">
-              <input type="text" id="2_3" name="1_2"size="12px">
+                <div class="form-inline">
+                  <input type="text" id="2_1" name="1_2"size="12px"class="form-control">
+                  <input type="text" id="2_2" name="1_2"size="12px"class="form-control">
+                  <input type="text" id="2_3" name="1_2"size="12px"class="form-control">
+                </div>
             </div>
           </li>
         </ol>
@@ -76,32 +82,56 @@
           <h3>二、选择题<small>(每小题10分)</samll></h3>
         </span>
       </div>
-      <ol>
-        <div>
-          <li>UML 与软件工程的关系是：<br/>
-            <input type="radio" id="2_1_1" name="2_1_1" value="A" />
-            <label for="2_1_1">（A）UML 就是软件工程</label><br />
-            <input type="radio"id="2_1_2"name="2_1_1" value="B" />
-            <label for="2_1_2">（B）UML 参与到软件工程中软件开发过程的几个阶段</label><br />
-            <input type="radio" id="2_1_3"name="2_1_1" value="C" />
-            <label for="2_1_3">（C）UML 与软件工程无关</label><br />
-            <input type="radio" id="2_1_4"name="2_1_1" value="D" />
-            <label for="2_1_4">（D）UML 是软件工程的一部分</label><br />
+      <div class="panel-body">
+        <ol>
+          <li>
+            <div class="form-group">
+              <label class="control-label">
+                UML 与软件工程的关系是：<br/>
+              </label>
+              <div class="radio">
+                <input type="radio" id="2_1_1" name="2_1_1" value="A" />
+                <label for="2_1_1">（A）UML 就是软件工程</label><br />
+              </div>
+              <div class="radio">
+                <input type="radio"id="2_1_2"name="2_1_1" value="B" />
+                <label for="2_1_2">（B）UML 参与到软件工程中软件开发过程的几个阶段</label><br />
+              </div>
+              <div class="radio">
+                <input type="radio" id="2_1_3"name="2_1_1" value="C" />
+                <label for="2_1_3">（C）UML 与软件工程无关</label><br />
+              </div>
+              <div class="radio">
+                <input type="radio" id="2_1_4"name="2_1_1" value="D" />
+                <label for="2_1_4">（D）UML 是软件工程的一部分</label><br />
+              </div>
+            </div>
           </li>
-        </div>
-        <div>
-          <li>Java 语言支持：<br/>
-            <input type="radio" id="2_2_1"name="2_2_1" value="A" />
-            <label for="2_2_1">（A）单继承</label><br />
-            <input type="radio" id="2_2_2"name="2_2_1" value="B" />
-            <label for="2_2_2">（B）多继承</label><br />
-            <input type="radio" id="2_2_3"name="2_2_1" value="C" />
-            <label for="2_2_3">（C）单继承和多继承都支持</label><br />
-            <input type="radio" id="2_2_4"name="2_2_1" value="D" />
-            <label for="2_2_4">（D）单继承和多继承都不支持</label><br />
+          <li>
+            <div class="form-group">
+              <label class="control-label">
+                Java 语言支持：<br/>
+              </label>
+              <div class="radio">
+                <input type="radio" id="2_2_1"name="2_2_1" value="A" />
+                <label for="2_2_1">（A）单继承</label><br />
+              </div>
+              <div class="radio">
+                <input type="radio" id="2_2_2"name="2_2_1" value="B" />
+                <label for="2_2_2">（B）多继承</label><br />
+              </div>
+              <div class="radio">
+                <input type="radio" id="2_2_3"name="2_2_1" value="C" />
+                <label for="2_2_3">（C）单继承和多继承都支持</label><br />
+              </div>
+              <div class="radio">
+                <input type="radio" id="2_2_4"name="2_2_1" value="D" />
+                <label for="2_2_4">（D）单继承和多继承都不支持</label><br />
+              </div>
+            </div>
           </li>
-        </div>
-      </ol>
+        </ol>
+      </div>
     </div>
     <div class="panel panel-default form-group">
       <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
@@ -109,78 +139,121 @@
           <h3>三、多选题<small>(每小题10分)</small></h3>
         </span>
       </div>
+      <div class="panel-body">
         <ol>
-          <div>
-            <li>用例的粒度分为以下哪三种。<br />
-              <input type="checkbox" id="3_1_1"name="3_1" value="A"/>
-              <label for="3_1_1">（A）概述级、</label><br/>
-              <input type="checkbox" id="3_1_2"name="3_1" value="B"/>
-              <label for="3_1_2">（B）需求级</label><br />
-              <input type="checkbox" id="3_1_3"name="3_1" value="C"/>
-              <label for="3_1_3">（C）用户目标级、</label><br />
-              <input type="checkbox" id="3_1_4"name="3_1" value="D"/>
-              <label for="3_1_4">（D）子功能级,</label><br/>
+            <li>
+              <div class="form-group">
+                <label class="control-label">
+                  用例的粒度分为以下哪三种。<br />
+                </label>
+                <div class="radio">
+                  <input type="checkbox" id="3_1_1"name="3_1" value="A"/>
+                  <label for="3_1_1">（A）概述级、</label><br/>
+                </div>
+                <div class="radio">
+                  <input type="checkbox" id="3_1_2"name="3_1" value="B"/>
+                  <label for="3_1_2">（B）需求级</label><br />
+                </div>
+                <div class="radio">
+                  <input type="checkbox" id="3_1_3"name="3_1" value="C"/>
+                  <label for="3_1_3">（C）用户目标级、</label><br />
+                </div>
+                <div class="radio">
+                  <input type="checkbox" id="3_1_4"name="3_1" value="D"/>
+                  <label for="3_1_4">（D）子功能级,</label><br/>
+                </div>
+              </div>
             </li>
-          </div>
-          <div>
-            <li>类图由以下哪三部分组成。<br />
-              <input type="checkbox" id="3_2_1"name="3_2" value="A"/>
-              <label for="3_2_1">（A）名称(Name)</label><br />
-              <input type="checkbox" id="3_2_2"name="3_2" value="B"/>
-              <label for="3_2_2">（B）属性(Attribute)</label><br />
-              <input type="checkbox" id="3_2_3"name="3_2" value="C"/>
-              <label for="3_2_3">（C）操作(Operation)</label><br />
-              <input type="checkbox" id="3_2_4"name="3_2" value="D"/>
-              <label for="3_2_4">（D）方法（Function）</label><br />
+            <li>
+              <div class="form-group">
+                <label class="control-label">
+                  类图由以下哪三部分组成。<br />
+                </label>
+                <div class="radio">
+                  <input type="checkbox" id="3_2_1"name="3_2" value="A"/>
+                  <label for="3_2_1">（A）名称(Name)</label><br />
+                </div>
+                <div class="radio">
+                  <input type="checkbox" id="3_2_2"name="3_2" value="B"/>
+                  <label for="3_2_2">（B）属性(Attribute)</label><br />
+                </div>
+                <div class="radio">
+                  <input type="checkbox" id="3_2_3"name="3_2" value="C"/>
+                  <label for="3_2_3">（C）操作(Operation)</label><br />
+                </div>
+                <div class="radio">
+                  <input type="checkbox" id="3_2_4"name="3_2" value="D"/>
+                  <label for="3_2_4">（D）方法（Function）</label><br />
+                </div>
+              </div>
             </li>
-          </div>
         </ol>
     </div>
+  </div>
     <div class="panel panel-default form-group ">
       <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
         <span class="glyphicon glyphicon-sort-by-attributes">
           <h3>四、判断题<small>(每小题10分)</small></h3>
         </span>
       </div>
+      <div class="panel-body">
         <ol>
-          <li>用例图只是用于和客户交流和沟通的，用于确定需求。
-            <div>
+          <li>
+            <div class="form-group">
+              <label class="control-label">
+                用例图只是用于和客户交流和沟通的，用于确定需求。
+              </label>
+            <div class="radio">
               <input type="radio" id="4_1_1"name="4_1" value="Y" />
               <label for="4_1_1">YES</label>
             </div>
-            <div>
+            <div class="radio">
               <input type="radio" id="4_1_2"name="4_1" value="N" />
               <label for="4_1_2">NO</label>
             </div>
+          </div>
           </li>
-          <li>在状态图中，终止状态在一个状态图中允许有任意多个。
-            <div>
-              <input type="radio" id="4_2_1"name="4_2" value="Y" />
-              <label for="4_2_1">YES</label>
-            </div>
-            <div>
-              <input type="radio" id="4_2_2"name="4_2" value="N" />
-              <label for="4_2_2">NO</label>
-            </div>
-            <br />
-          </li>
-      </ol>
-    </div>
-    <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
-      <span class="glyphicon glyphicon-sort-by-attributes">
-        <h3>五、简答题<small>(每小题15分)</small></h3>
-      </span>
-    </div>
-      <ol>
-        <div>
           <li>
-            <label for="5_1">简述什么是模型以及模型的表现形式?</label></br>
-            <textarea rows = "5" cols = "40" id ="5_1" name="5_1" ></textarea>
+            <div class="form-group">
+              <label class="control-label">
+                在状态图中，终止状态在一个状态图中允许有任意多个。
+              </label>
+              <div class="radio">
+                <input type="radio" id="4_2_1"name="4_2" value="Y" />
+                <label for="4_2_1">YES</label>
+              </div>
+              <div class="radio">
+                <input type="radio" id="4_2_2"name="4_2" value="N" />
+                <label for="4_2_2">NO</label>
+              </div>
+            </div>
           </li>
-        </div>
-      </ol>
-    <div  class="btn-lg glyphicon glyphicon-user">
-      <input type="button" value="提交"onclick=" printScore();"/>
+        </ol>
+      </div>
+    </div>
+    <div class="panel panel-default form-group ">
+      <div class="panel panel-default form-group"style="background-color:rgb(248,248,248)">
+        <span class="glyphicon glyphicon-sort-by-attributes">
+          <h3>五、简答题<small>(每小题15分)</small></h3>
+        </span>
+      </div>
+      <div class="panel-body">
+        <ol>
+          <li>
+            <div class="form-group">
+              <label for="5_1" class="control-label">简述什么是模型以及模型的表现形式?</label></br>
+                <textarea rows = "5" cols = "40" id ="5_1" name="5_1" ></textarea>
+            </li>
+          </div>
+        </ol>
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <div  class="btn-lg glyphicon glyphicon-user"style="border:5px dotted red;color:gray">
+              <input type="button" value="提交"onclick=" printScore();"/>
+            </div>
+          </div>
+      </div>
+      </div>
     </div>
   </div>
  </body>
